package com.pluralsight.delishop.backend;

public interface Product {
    double getPrice();
    String toCSVString();
}
