@startuml
abstract class com.pluralsight.delishop.backend.PremiumTopping {
~ double price
}

class com.pluralsight.delishop.backend.Sandwich {
- ArrayList<Topping> toppings
# boolean isToasted
# BreadType breadType
# SandwichSize sandwichSize
# double price
+ SandwichSize getSandwichSize()
+ void addTopping(Topping)
+ ArrayList<Topping> getToppings()
+ double getPrice()
+ String toString()
+ String toCSVString()
}


enum com.pluralsight.delishop.backend.SandwichSize {
+  FOURINCH
+  EIGHTINCH
+  TWELVEINCH
}

enum com.pluralsight.delishop.backend.BreadType {
+  WHITE
+  WHEAT
+  RYE
+  WRAP
}

interface com.pluralsight.delishop.backend.Product {
~ double getPrice()
~ String toCSVString()
}

class com.pluralsight.delishop.backend.Cheese {
- TypeOfCheese typeOfCheese
+ TypeOfCheese getTypeOfCheese()
+ double getPrice()
+ String toString()
+ String toCSVString()
}


enum com.pluralsight.delishop.backend.TypeOfCheese {
+  AMERICAN
+  PROVOLONE
+  CHEDDAR
+  SWISS
}

class com.pluralsight.delishop.backend.Chips {
- String name
+ double getPrice()
+ String toString()
+ String toCSVString()
}


class com.pluralsight.delishop.backend.Drink {
- DrinkSize drinkSize
- String name
# double price
+ double getPrice()
+ String toString()
+ String toCSVString()
}


enum com.pluralsight.delishop.backend.DrinkSize {
+  SMALL
+  MEDIUM
+  LARGE
}

class com.pluralsight.delishop.backend.Sauce {
~ RegularToppings sauce
+ double getPrice()
+ String toCSVString()
+ String toString()
}


class com.pluralsight.delishop.backend.RegularTopping {
# RegularToppings regularTopping
+ RegularToppings getRegularTopping()
+ double getPrice()
+ String toString()
+ String toCSVString()
}


class com.pluralsight.delishop.backend.Meat {
# Meat.TypeOfMeat typeOfMeat
+ Meat.TypeOfMeat getTypeOfMeat()
+ double getPrice()
+ String toString()
+ String toCSVString()
}


enum com.pluralsight.delishop.backend.TypeOfMeat {
+  STEAK
+  HAM
+  SALAMI
+  ROAST_BEEF
+  CHICKEN
+  BACON
}

abstract class com.pluralsight.delishop.backend.Topping {
# boolean hasExtra
# Sandwich.SandwichSize size
+ {abstract}double getPrice()
+ {abstract}String toCSVString()
}


class com.pluralsight.delishop.backend.OrderFileHandler {
~ int counter
+ void createReceipt(Order)
}


class com.pluralsight.delishop.backend.Order {
- ArrayList<Product> items
+ void addItem(Product)
+ ArrayList<Product> getItems()
+ double getTotalPrice()
+ String toString()
+ String toCSVString()
}




com.pluralsight.delishop.backend.Topping <|-- com.pluralsight.delishop.backend.PremiumTopping
com.pluralsight.delishop.backend.Product <|.. com.pluralsight.delishop.backend.Sandwich
com.pluralsight.delishop.backend.PremiumTopping <|-- com.pluralsight.delishop.backend.Cheese
com.pluralsight.delishop.backend.Product <|.. com.pluralsight.delishop.backend.Chips
com.pluralsight.delishop.backend.Product <|.. com.pluralsight.delishop.backend.Drink
com.pluralsight.delishop.backend.Product <|.. com.pluralsight.delishop.backend.Sauce
com.pluralsight.delishop.backend.Topping <|-- com.pluralsight.delishop.backend.RegularTopping
com.pluralsight.delishop.backend.PremiumTopping <|-- com.pluralsight.delishop.backend.Meat
@enduml